--- a/my-gatsby-project/package.json
+++ b/my-gatsby-project/package.json
@@ -14,6 +14,7 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@reach/router": "^1.3.4",
     "gatsby": "^2.26.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
