--- a/my-gatsby-project/package.json
+++ b/my-gatsby-project/package.json
@@ -15,7 +15,9 @@
   },
   "dependencies": {
     "@reach/router": "^1.3.4",
+    "dotenv": "^8.2.0",
     "gatsby": "^2.26.1",
+    "gatsby-source-contentful": "^4.2.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
